portainer/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer
  namespace: portainer
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: kap-vault-issuer
    cert-manager.io/common-name: portainer.dev.local
spec:
  ingressClassName: nginx
  rules:
  - host: portainer.dev.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portainer
            port:
              number: 9443
  tls:
  - hosts:
    - portainer.dev.local
    secretName: portainer-cert
